--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "astro": "^4.13.3",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.10"
   }
 }
