--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.13.3",
     "tailwindcss": "^3.4.9",
+    "theme-change": "^2.5.0",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
