--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.2",
+    "@astrojs/preact": "^3.5.1",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.13.3",
+    "preact": "^10.23.1",
     "tailwindcss": "^3.4.9",
     "theme-change": "^2.5.0",
     "typescript": "^5.5.4"
