--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.2",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.7.2",
     "astro": "^4.13.3",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.5.4"
