--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "@hookform/resolvers": "^3.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/validator": "^13.12.1",
     "@vercel/speed-insights": "^1.0.12",
     "astro": "^4.13.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "tailwindcss": "^3.4.9",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "daisyui": "^4.12.10",
