[issue/5] build: @iconify-icon/reactをインストールする

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "validator": "^13.12.0"
   },
   "devDependencies": {
+    "@iconify-icon/react": "^2.1.0",
     "daisyui": "^4.12.10",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.8",
